--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
               <div class="selection-orb selection-orb--violet"></div>
               <div class="selection-grid-layer"></div>
             </div>
+            <div class="selection-links flex gap-2">
+              <a href="/model" class="selection-link">Model</a>
+              <a href="/fiyatlandırma" class="selection-link">Fiyatlandırma</a>
+              <a id="auth-open" href="profile.html" class="selection-link">Üyelik</a>
+            </div>
             <h1 class="selection-title text-5xl md:text-7xl font-serif font-light text-slate-200 mb-4">
               <span data-tilt="">KΔIRA'ya Hoş Geldin</span>
             </h1>
             <p class="selection-subtitle text-lg md:text-xl text-slate-400 mb-12 max-w-2xl">Lütfen deneyimlemek istediğin projeyi seç.</p>
             <div class="selection-grid-content grid md:grid-cols-2 gap-8 w-full max-w-5xl">
-                <div class="absolute top-6 right-6 flex gap-2">
-                  <a href="/model" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Model</a>
-                  <a href="/fiyatlandırma" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Fiyatlandırma</a>
-                  <a id="auth-open" href="profile.html" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Üyelik</a>
-                </div>
                 <div id="select-afterlife" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-cyan-400 mb-3">Digital Afterlife</h2>
                     <p class="text-slate-400">Zihnin biyolojiye hapis olmadığı, anıların sonsuza dek yaşadığı felsefi bir yolculuğu keşfet.</p>
