--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
     <section id="comments-section" class="mt-24 px-4 max-w-5xl mx-auto">
       <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Topluluk Yorumları (Yakında!)</h2>
       <p class="text-slate-400 mb-4">Olumlu deneyim ve sorularınızı paylaşın. Küfür/olumsuz içerik yayınlanmaz. Yorum yapabilmek için giriş yapın.</p>
-      <div id="comment-auth-hint" class="mb-3 text-sm text-amber-300 hidden">Yorum için giriş gerekli. <a href="profile.html" class="underline">Üyelik</a></div>
+      <div id="comment-auth-hint" class="mb-3 text-sm text-amber-300 hidden glass-chip inline-flex items-center gap-2 px-4 py-2">Yorum için giriş gerekli. <a href="profile.html" class="underline">Üyelik</a></div>
       <div id="comment-form" class="glass-panel p-4 mb-6 allow-select">
         <textarea id="comment-text" rows="3" placeholder="Mesajınızı yazın (yalnızca olumlu, yapıcı içerikler yayınlanır)" class="allow-select w-full glass-input rounded px-3 py-2 text-white placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
         <div class="mt-3 flex items-center gap-2">
