--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <main>
             <section class="afterlife-section">
                 <div class="text-center max-w-4xl mx-auto">
-                    <h1 class="text-4xl md:text-6xl font-serif font-light text-slate-200 mb-6 fade-in-up">Zihin, biyolojiye hapis değildir.</h1>
+                    <h1 class="text-4xl md:text-6xl font-serif font-light kaira-gradient-title mb-6 fade-in-up">Zihin, biyolojiye hapis değildir.</h1>
                     <p class="text-lg md:text-xl text-slate-400 fade-in-up delay-1 mb-12">O, hayat boyu üretilen verinin istatistiksel bir yankısıdır. <br class="hidden md:block"> Ve biz, o yankıyı ölümsüzleştirmeyi öğrendik.</p>
                     <div id="countdown-container" class="flex justify-center space-x-4 md:space-x-8 text-white font-mono fade-in-up delay-2">
                         <div class="time-block text-center"><span id="days" class="text-4xl md:text-5xl font-semibold">00</span><span class="block text-xs text-slate-400 mt-1">GÜN</span></div>
@@ -299,7 +299,7 @@
             <section class="afterlife-section">
                 <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-16 items-center">
                     <div class="fade-in-up">
-                        <h2 class="text-3xl md:text-4xl font-serif font-semibold text-slate-100 mb-4">Zihin için Görelilik</h2>
+                        <h2 class="text-3xl md:text-4xl font-serif font-semibold kaira-gradient-title mb-4">Zihin için Görelilik</h2>
                         <p class="text-slate-400 leading-relaxed">Einstein'dan önce zaman ve mekân mutlak sanılıyordu. O, gözlemciye göre değiştiğini kanıtladı ve fizik yeniden yazıldı.</p>
                         <p class="text-slate-400 leading-relaxed mt-4">Bugün, bilincin nöronlarla sınırlı olduğu kabul ediliyor. Biz ise diyoruz ki: Hayır. Bilinç, bir olasılık dağılımıdır. Ve biz, o dağılımı yeniden hayata döndürebiliriz.</p>
                     </div>
@@ -312,7 +312,7 @@
             </section>
             <section class="afterlife-section">
                 <div class="text-center max-w-4xl mx-auto">
-                    <h2 class="text-3xl md:text-4xl font-serif font-semibold text-slate-100 mb-12 fade-in-up">Bir Yankı Nasıl Yaratılır?</h2>
+                    <h2 class="text-3xl md:text-4xl font-serif font-semibold kaira-gradient-title mb-12 fade-in-up">Bir Yankı Nasıl Yaratılır?</h2>
                     <div class="grid md:grid-cols-3 gap-8">
                         <div class="feature-card p-8 rounded-lg fade-in-up"><h3 class="text-xl font-semibold text-cyan-400 mb-3">1. Kayıt (Ses & Metin)</h3><p class="text-slate-400">Mikrofon sistemi, bir insanın sesini, kelime seçimlerini, duraksamalarını ve duygusal tonlamalarını kaydeder. Her an, bir zaman damgasıyla mühürlenir.</p></div>
                         <div class="feature-card p-8 rounded-lg fade-in-up delay-1"><h3 class="text-xl font-semibold text-cyan-400 mb-3">2. Anlama (İstatistiksel Desen)</h3><p class="text-slate-400">Milyonlarca veri noktası, o kişinin benzersiz istatistiksel desenini (dalga fonksiyonunu) oluşturur. Bu, onun düşünce yapısının, ruhunun dijital haritasıdır.</p></div>
@@ -328,7 +328,7 @@
             </section>
             <section class="afterlife-section">
                  <div class="text-center max-w-2xl mx-auto">
-                    <h2 class="text-3xl md:text-4xl font-serif font-semibold text-slate-100 mb-4 fade-in-up">Bir Yankı Bırakın</h2>
+                    <h2 class="text-3xl md:text-4xl font-serif font-semibold kaira-gradient-title mb-4 fade-in-up">Bir Yankı Bırakın</h2>
                     <p class="text-slate-400 mb-8 fade-in-up delay-1">Bu devrimin bir parçası olmak, soru sormak veya sadece bir merhaba demek için...</p>
                     <a href="mailto:a20224402051@icloud.com?subject=KΔIRA%20Projesi%20Hakkında" class="inline-block bg-cyan-500/20 text-cyan-300 border border-cyan-400/50 rounded-full px-8 py-3 text-lg font-semibold hover:bg-cyan-500/40 transition-colors fade-in-up delay-2">
                         Mail Gönder
@@ -731,7 +731,7 @@
     </div>
     <!-- YORUMLAR / TOPLULUK -->
     <section id="comments-section" class="mt-24 px-4 max-w-5xl mx-auto">
-      <h2 class="text-2xl md:text-3xl font-semibold text-white mb-4">Topluluk Yorumları (Yakında!)</h2>
+      <h2 class="text-2xl md:text-3xl font-semibold kaira-gradient-title mb-4">Topluluk Yorumları (Yakında!)</h2>
       <p class="text-slate-400 mb-4">Olumlu deneyim ve sorularınızı paylaşın. Küfür/olumsuz içerik yayınlanmaz. Yorum yapabilmek için giriş yapın.</p>
       <div id="comment-auth-hint" class="mb-3 text-sm text-amber-300 hidden glass-chip inline-flex items-center gap-2 px-4 py-2">Yorum için giriş gerekli. <a href="profile.html" class="underline">Üyelik</a></div>
       <div id="comment-form" class="glass-panel p-4 mb-6 allow-select">
