--- a/forum/forum.html
+++ b/forum/forum.html
@@ -259,7 +259,8 @@
     };
 
     const apiGet = async (path, params = {}) => {
-      const url = new URL(joinUrl(API_BASE, path), window.location.origin);
+      const urlString = joinUrl(API_BASE, path);
+      const url = new URL(urlString, window.location.origin);
       Object.entries(params).forEach(([key, value]) => {
         if (value !== undefined && value !== null && value !== '') {
           url.searchParams.append(key, value);
@@ -270,20 +271,31 @@
         const detail = await res.text();
         throw new Error(detail || 'İstek başarısız oldu');
       }
-      return res.json();
+      const text = await res.text();
+      try {
+        return JSON.parse(text);
+      } catch (err) {
+        throw new Error(`Forum API JSON parse error. Yanıt: ${text.slice(0,120)}`);
+      }
     };
 
     const apiPost = async (path, payload) => {
-      const res = await fetch(joinUrl(API_BASE, path), {
+      const urlString = joinUrl(API_BASE, path);
+      const res = await fetch(urlString, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload),
       });
       if (!res.ok) {
-        const err = await res.json().catch(() => ({}));
-        throw new Error(err.error || 'İşlem başarısız oldu');
+        const detail = await res.text();
+        throw new Error(detail || 'İşlem başarısız oldu');
       }
-      return res.json();
+      const text = await res.text();
+      try {
+        return JSON.parse(text);
+      } catch (err) {
+        throw new Error(`Forum API JSON parse error. Yanıt: ${text.slice(0,120)}`);
+      }
     };
 
     const renderCategories = () => {
